--- a/style.css
+++ b/style.css
@@ -1,4 +1,11 @@
 
+:root {
+    --grey: rgba(27,27,27);
+}
+
+/* google fonts */
+@import url('https://fonts.googleapis.com/css2?family=Alkatra&display=swap');
+
 html {
     box-sizing: border-box;
 }
@@ -7,5 +14,93 @@ html {
 body {
     margin: 0;
     min-height: 100vh;
-   
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--grey);
 }
+
+
+/* Button */
+.button-container {
+    border: 2px solid white;
+    width: 9rem;
+    height: 5rem;
+    padding: 1rem;
+    border-radius: 1rem;
+    box-shadow: inset 0 2rem 0.5rem -1.7rem rgba(255,255,255, .9);
+}
+
+button {
+    cursor: pointer;
+    outline: none;
+    width: 100%;
+    height: 100%;
+    font-family: 'Alkatra', cursive;
+    text-transform: uppercase;
+    font-size: 2rem;
+    color: whitesmoke;
+    text-shadow: 0 2px 5px black;
+    background: linear-gradient(to top, #696969, #333 );
+    border-radius: 1rem;
+    box-shadow: inset 0 2rem 0.5rem -1.7rem rgba(255,255,255, .5), 0 1rem 1rem 0 rgba(0,0,0, 0.3);
+}
+
+
+button:hover {
+    background: linear-gradient(to bottom, #696969, #333 ); 
+}
+
+button:active {
+    transform: translateY(3px);
+    box-shadow: 0 0.5rem 0.5rem 0 rgba(0,0,0, 0.3);
+}
+
+
+
+/* font face rules */
+/* bengali */
+@font-face {
+    font-family: 'Alkatra';
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/alkatra/v3/r05EGLZA5qhCYsyJbuChFuK48Medzngmu4captHleg.woff2) format('woff2');
+    unicode-range: U+0964-0965, U+0981-09FB, U+200C-200D, U+20B9, U+25CC;
+  }
+  /* devanagari */
+  @font-face {
+    font-family: 'Alkatra';
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/alkatra/v3/r05EGLZA5qhCYsyJbuChFuK48Medzngmu4cJptHleg.woff2) format('woff2');
+    unicode-range: U+0900-097F, U+1CD0-1CF6, U+1CF8-1CF9, U+200C-200D, U+20A8, U+20B9, U+25CC, U+A830-A839, U+A8E0-A8FB;
+  }
+  /* oriya */
+  @font-face {
+    font-family: 'Alkatra';
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/alkatra/v3/r05EGLZA5qhCYsyJbuChFuK48Medzngmu4cRptHleg.woff2) format('woff2');
+    unicode-range: U+0964-0965, U+0B01-0B77, U+200C-200D, U+20B9, U+25CC;
+  }
+  /* latin-ext */
+  @font-face {
+    font-family: 'Alkatra';
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/alkatra/v3/r05EGLZA5qhCYsyJbuChFuK48Medzngmu4cGptHleg.woff2) format('woff2');
+    unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+  }
+  /* latin */
+  @font-face {
+    font-family: 'Alkatra';
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/alkatra/v3/r05EGLZA5qhCYsyJbuChFuK48Medzngmu4cIptE.woff2) format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+  }
